objects/MembershipCatalog__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>MembershipCatalog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpirationPeriod__c</fullName>
        <label>Expiration Period (Months)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEID__c</fullName>
        <label>SE ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_MembershipCatalogID__c</fullName>
        <displayFormat>MC-{00000}</displayFormat>
        <label>Catalog Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industry Affiliation</fullName>
                </value>
                <value>
                    <fullName>Professional Affiliation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Affiliation Catalog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Retired__c</columns>
        <columns>SEID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Affiliation Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affiliation Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>